--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -8,11 +8,6 @@
     @media screen and (min-width: $breakpoint-small-medium) {
         display: inline-block;
     }
-
-    @media screen and (min-width: $breakpoint-medium) {
-        grid-column: 1 / 3;
-        grid-row: 7 / 8;
-    }
 }
 
 a.scroll-to-top {
