--- a/src/scss/components/_weather.scss
+++ b/src/scss/components/_weather.scss
@@ -9,19 +9,6 @@
     }
 }
 
-.wea-container {
-    background: linear-gradient(155deg, rgba(113, 152, 187, 1) 0%, rgba(194, 218, 232, 1) 60%);
-    padding: 1.5em;
-    width: 100%;
-}
-
-.wea-title {
-    font-family: "Bitter", serif;
-    font-size: 1.5em;
-    font-weight: 500;
-    text-align: center;
-}
-
 .wea-info-wrapper {
     margin-top: 12px;
 
@@ -45,6 +32,7 @@
 }
 
 .wea-location {
+    background-color: $white;
     grid-column: 1 / 4;
     text-align: center;
 
