--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -49,9 +49,8 @@ a.link-style {
 
 /* main - general */
 .main-wrapper {
-    margin-bottom: 62px;
-
     @media screen and (min-width: $breakpoint-xsmall) {
+        margin-bottom: 62px;
         padding: 0 2em;
     }
 
@@ -61,7 +60,7 @@ a.link-style {
 
     @media screen and (min-width: $breakpoint-medium) {
         display: grid;
-        gap: 1.5em;
+        gap: 0 1.5em;
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: auto;
     }
@@ -93,12 +92,6 @@ a.link-style {
 .main-text {
     font-size: 1.25em;
     margin-top: 0.5em;
-}
-
-.section-wrapper {
-    @media screen and (min-width: $breakpoint-xsmall) {
-        margin-top: 4em;
-    }
 }
 
 .arrow-right-svg {
